change vh to prevent overflow issue

--- a/front-end/atlas-react-app/src/aboutus.css
+++ b/front-end/atlas-react-app/src/aboutus.css
@@ -56,7 +56,7 @@ article img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 96vh;
     /* border: solid gold 5px; */
     background-image: url(earth.png);
     background-color: whitesmoke;
